Prettify RunInputs